--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         I received my M.S. degree in <a href="https://minghsiehece.usc.edu/">Electrical Engineering</a> from <a href="https://www.usc.edu/">University of Southern California (USC)</a> in 2016 and B.S. degree in <a href="https://web.ee.ntu.edu.tw/">Electrical Engineering</a> from <a href="https://www.ntu.edu.tw/">National Taiwan University (NTU)</a> in 2013, respectivily.  
                     </p>
                     <p style="color:red;">
-                        &#11088; We are actively recruiting research interns in the Face Science Team at Microsoft Taiwan. Apply <a href="https://careers.microsoft.com/students/us/en/job/1101359/Software-Engineer-Intern-Face-Science">here</a> and send an email with your CV to chiwa@microsoft.com with subject “[2022 Research Intern] yourname” to let us know.
+                        &#11088; We are actively recruiting <strong>full-time research interns</strong> in the Face Science Team at Microsoft Taiwan. Apply <a href="https://careers.microsoft.com/students/us/en/job/1101359/Software-Engineer-Intern-Face-Science">here</a> and send an email with your CV to chiwa@microsoft.com with subject “[2022 Research Intern] yourname” to let us know.
                     </p>
                     <p style="text-align:center">
                     <a href="mailto:chienyiwang0922@gmail.com">Email</a> &nbsp;/&nbsp;
