--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <papertitle>Disentangled Representation with Dual-stage Feature Learning for Face Anti-spoofing</papertitle>
                 
                 <br>
-                <a href="https://jackie840129.github.io/">Yu-Chun Wang</a>,
+                Yu-Chun Wang,
                 <strong>Chien-Yi Wang</strong>, 
                 <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>
                 <br>
