--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <papertitle>Disentangled Representation with Dual-stage Feature Learning for Face Anti-spoofing</papertitle>
                 
                 <br>
-                Yu-Chun Wang,
+                <a href="mailto:yuchun@gapp.nthu.edu.tw">Yu-Chun Wang</a>,
                 <strong>Chien-Yi Wang</strong>, 
                 <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>
                 <br>
