--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <a href="https://github.com/jackie840129/FedFR">code (coming soon)</a> 
                 <p></p>
                 <p>
-                In this work, we propose a Federated Learning based framework called FedFR to improve the generic face representation in a privacy-aware manner. Besides, the framework jointly optimizes personalized models for the corresponding clients via the proposed Decoupled Feature Customization module.
+                  We propose a Federated Learning based framework called FedFR to improve the generic face representation in a privacy-aware manner. Besides, the framework jointly optimizes personalized models for the corresponding clients via the proposed Decoupled Feature Customization module.
                 </p>
             </td>
         </tr>
@@ -100,7 +100,7 @@
                 <a href="https://arxiv.org/abs/2110.09157">arXiv</a>
                 <p></p>
                 <p>
-                    In this work, we propose a novel dual-stage disentangled representation learning method that can efficiently untangle spoof-related features from irrelevant ones. Unlike previous FAS disentanglement works with one-stage architecture, we found that the dual-stage training design can improve the training stability and effectively encode the features to detect unseen attack types.
+                  We propose a novel dual-stage disentangled representation learning method that can efficiently untangle spoof-related features from irrelevant ones. Unlike previous FAS disentanglement works with one-stage architecture, we found that the dual-stage training design can improve the training stability and effectively encode the features to detect unseen attack types.
                 </p>
             </td>
         </tr>
@@ -123,7 +123,7 @@
               <a href="https://chienyiwang.github.io">arXiv</a>
               <p></p>
               <p>
-                  We propose to leverage pseudo facial segmentation and depth maps to assist the RGB-D face recognition task. With the multi-modality augmentation, the proposed mask-guided RGB-D recognition model could achieve superior performance on several benchmarks.
+                We propose to leverage pseudo facial segmentation and depth maps to assist the RGB-D face recognition task. With the multi-modality augmentation, the proposed mask-guided RGB-D recognition model could achieve superior performance on several benchmarks.
               </p>
           </td>
       </tr>
