--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <strong>Chien-Yi Wang</strong>, 
               <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>
               <br>
-              <em>IEEE International Conference on Automatic Face and Gesture Recognition (FG)</em>, 2021 &nbsp <p style="color:red;">(Oral Presentation)</p>
+              <em>IEEE International Conference on Automatic Face and Gesture Recognition (FG)</em>, 2021 <p style="color:red;">(Oral)</p> &nbsp 
               <br>
               <a href="https://chienyiwang.github.io">arXiv</a>
               <p></p>
