--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/wacv2022.png" alt="blind-date" width="160" height="160">
+                <img src="images/wacv2022_rs.png" alt="blind-date" width="160" height="160">
                 </td>
             <td width="75%" valign="middle">
                 <papertitle>Disentangled Representation with Dual-stage Feature Learning for Face Anti-spoofing</papertitle>
@@ -107,30 +107,7 @@
 
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/fg2021.png" alt="blind-date" width="160" height="160">
-              </td>
-          <td width="75%" valign="middle">
-              <papertitle>High-Accuracy RGB-D Face Recognition via Segmentation-Aware Face Depth Estimation and Mask-Guided Attention Network</papertitle>
-              
-              <br>
-              <a href="mailto:s108062802@m108.nthu.edu.tw">Meng-Tzu Chiu</a>,
-              <a href="mailto:s107062523@m107.nthu.edu.tw">Hsun-Ying Cheng</a>,
-              <strong>Chien-Yi Wang</strong>, 
-              <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>
-              <br>
-              <em>IEEE International Conference on Automatic Face and Gesture Recognition (FG)</em>, 2021 &nbsp <font color="red"><strong>(Oral)</strong></font>
-              <br>
-              <a href="https://chienyiwang.github.io">arXiv</a>
-              <p></p>
-              <p>
-                We propose to leverage pseudo facial segmentation and depth maps to assist the RGB-D face recognition task. With the multi-modality augmentation, the proposed mask-guided RGB-D recognition model could achieve superior performance on several benchmarks.
-              </p>
-          </td>
-        </tr>
-
-        <tr>
-          <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/fg2021.png" alt="blind-date" width="160" height="160">
+              <img src="images/fg2021_rs.png" alt="blind-date" width="160" height="160">
               </td>
           <td width="75%" valign="middle">
               <papertitle>High-Accuracy RGB-D Face Recognition via Segmentation-Aware Face Depth Estimation and Mask-Guided Attention Network</papertitle>
