--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/wacv2022_rs.png" alt="blind-date" width="160" height="160">
+                <img src="images/wacv2022_pad.png" alt="blind-date" width="160" height="160">
                 </td>
             <td width="75%" valign="middle">
                 <papertitle>Disentangled Representation with Dual-stage Feature Learning for Face Anti-spoofing</papertitle>
@@ -107,7 +107,7 @@
 
         <tr>
           <td style="padding:20px;width:25%;vertical-align:middle">
-              <img src="images/fg2021_rs.png" alt="blind-date" width="160" height="160">
+              <img src="images/fg2021_pad.png" alt="blind-date" width="160" height="160">
               </td>
           <td width="75%" valign="middle">
               <papertitle>High-Accuracy RGB-D Face Recognition via Segmentation-Aware Face Depth Estimation and Mask-Guided Attention Network</papertitle>
@@ -124,6 +124,56 @@
               <p></p>
               <p>
                 We propose to leverage pseudo facial segmentation and depth maps to assist the RGB-D face recognition task. With the multi-modality augmentation, the proposed mask-guided RGB-D recognition model could achieve superior performance on several benchmarks.
+              </p>
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/bmvc2020_pad.png" alt="blind-date" width="160" height="160">
+              </td>
+          <td width="75%" valign="middle">
+              <papertitle>Unified Representation Learning for Cross Model Compatibility</papertitle>
+              
+              <br>
+              <strong>Chien-Yi Wang</strong>,
+              <a href="https://amjltc295.github.io/">Ya-Liang Chang</a>,
+              <a href="https://tw.linkedin.com/in/shang-ta-yang-852429133">Shang-Ta Yang</a>,
+              <a href="http://www.dongchen.pro/">Dong Chen</a>,
+              <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>
+              <br>
+              <em>British Machine Vision Conference (BMVC)</em>, 2020 &nbsp
+              <br>
+              <a href="https://arxiv.org/abs/2008.04821">arXiv</a>
+              <p></p>
+              <p>
+                We propose a unified representation learning framework to address the Cross Model Compatibility (CMC) problem in the context of visual search applications. The method can be applied onto face recognition and person re-identification tasks.
+              </p>
+          </td>
+        </tr>
+
+        <tr>
+          <td style="padding:20px;width:25%;vertical-align:middle">
+              <img src="images/iv2018_pad.png" alt="blind-date" width="160" height="160">
+              </td>
+          <td width="75%" valign="middle">
+              <papertitle>A 3D Dynamic Scene Analysis Framework for Development of Intelligent Transportation Systems</papertitle>
+              
+              <br>
+              <strong>Chien-Yi Wang</strong>, 
+              <a href="https://scholar.google.com/citations?user=e3zULroAAAAJ&hl=en">Athma Narayanan</a>,
+              <a href="https://www.linkedin.com/in/patilnabhi/">Abhishek Patil</a>,
+              <a href="https://zhanwei.site/">Wei Zhan</a>,
+              <a href="https://sites.google.com/site/yitingchen0524/home">Yi-Ting Chen</a>
+              <br>
+              <em>IEEE Intelligent Vehicles Symposium (IV)</em>, 2018 &nbsp <font color="red"><strong>(Oral)</strong></font>
+              <br>
+              <a href="https://drive.google.com/file/d/1dyE21ZDGgCyl15mj9MOgr4t7cBbutENN/view?usp=sharing">paper</a>
+              /
+              <a href="https://drive.google.com/file/d/1gxqToHOL2_I_AHm1aXxKxyu0aApIT2fY/view?usp=sharing">video</a>
+              <p></p>
+              <p> 
+                We propose a 3D dynamic scene analysis framework as the first step toward driving scene understanding. Specifically, given a sequence of synchronized 2D and 3D sensory data, the framework systematically integrates different perception modules to obtain 3D position, orientation, velocity and category of traffic participants and the ego car in a reconstructed 3D semantically labeled traffic scene.
               </p>
           </td>
         </tr>
