--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
               <a href="https://zhanwei.site/">Wei Zhan</a>,
               <a href="https://sites.google.com/site/yitingchen0524/home">Yi-Ting Chen</a>
               <br>
-              <em>IEEE Intelligent Vehicles Symposium (IV)</em>, 2018 &nbsp <font color="red"><strong>(Oral)</strong></font>
+              <em>IEEE Intelligent Vehicles Symposium (IV)</em>, 2018 &nbsp
               <br>
               <a href="https://drive.google.com/file/d/1dyE21ZDGgCyl15mj9MOgr4t7cBbutENN/view?usp=sharing">paper</a>
               /
