add bmvc paper link

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
               <em>British Machine Vision Conference (BMVC)</em>, 2020 &nbsp
               <br>
               <a href="https://arxiv.org/abs/2008.04821">arXiv</a>
+              /
+              <a href="https://www.bmvc2020-conference.com/assets/papers/0195.pdf">paper</a>
               <p></p>
               <p>
                 We propose a unified representation learning framework to address the Cross Model Compatibility (CMC) problem in the context of visual search applications. The method can be applied onto face recognition and person re-identification tasks.
