--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
               <em>IEEE International Conference on Automatic Face and Gesture Recognition (FG)</em>, 2021 &nbsp <font color="red"><strong>(Oral)</strong></font>
               <br>
               <a href="https://chienyiwang.github.io">arXiv</a>
+              /
+              <a href="https://drive.google.com/file/d/1Y0tINMI_r6yUoDaap9VdvgSNa6yXga86/view?usp=sharing">poster</a>
+              /
+              <a href="https://drive.google.com/file/d/1oNzwjEaYJwgjgPJI93IfNh9z_JUWBI60/view?usp=sharing">video</a>
               <p></p>
               <p>
                 We propose to leverage pseudo facial segmentation and depth maps to assist the RGB-D face recognition task. With the multi-modality augmentation, the proposed mask-guided RGB-D recognition model could achieve superior performance on several benchmarks.
