--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               <br>
               <em>IEEE International Conference on Automatic Face and Gesture Recognition (FG)</em>, 2021 &nbsp <font color="red"><strong>(Oral)</strong></font>
               <br>
-              <a href="https://chienyiwang.github.io">arXiv</a>
+              <a href="https://arxiv.org/abs/2112.11713">arXiv</a>
               /
               <a href="https://drive.google.com/file/d/1Y0tINMI_r6yUoDaap9VdvgSNa6yXga86/view?usp=sharing">poster</a>
               /
