--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                     </p>
                     <p style="text-align:center">
                     <a href="mailto:chienyiwang0922@gmail.com">Email</a> &nbsp;/&nbsp;
+                    <a href="https://drive.google.com/file/d/1e3jpKX3dTI0KAE-2Y_7Y89JO2lT1w0vn/view?usp=sharing">CV</a> &nbsp;/&nbsp;
                     <a href="https://scholar.google.com/citations?user=05LW2DcAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
                     <a href="https://www.linkedin.com/in/chienyiwang"> LinkedIn </a>&nbsp;/&nbsp;
                     <a href="https://twitter.com/chienyi_wang">Twitter </a>&nbsp;/&nbsp;
