--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 
 <!DOCTYPE HTML>
-<html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en">
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-X8CY1YZ5XC"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-X8CY1YZ5XC');
+  </script>
+
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
   <title>Chien-Yi Wang</title>
   
@@ -74,7 +86,7 @@
                 <br>
                 <em>36th AAAI Conference on Artificial Intelligence (AAAI)</em>, 2022 &nbsp
                 <br>
-                <a href="https://chienyiwang.github.io">arXiv</a>
+                <a href="https://arxiv.org/abs/2112.12496">arXiv</a>
                 /
                 <a href="https://github.com/jackie840129/FedFR">code (coming soon)</a> 
                 <p></p>
