--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
       </td>
     </tr>
   </table>
+  <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=uty00DWjmG7UZ-8dcVXNUXb54olrrNY_jWSYn4Mi-2Q"></script>
 </body>
 
 </html>
