--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         </table>
         <br>
         <br>
-        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=uty00DWjmG7UZ-8dcVXNUXb54olrrNY_jWSYn4Mi-2Q"></script>
+        <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=uty00DWjmG7UZ-8dcVXNUXb54olrrNY_jWSYn4Mi-2Q"></script>
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;">
             <tr>
               <td style="padding:0px">
