--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <a href="http://media.ee.ntu.edu.tw/member/">Shao-Yi Chien</a>, 
                 <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>
                 <br>
-                <em>36th AAAI Conference on Artificial Intelligence (AAAI)</em>, 2022 &nbsp
+                <em>36th AAAI Conference on Artificial Intelligence (AAAI)</em>, 2022 &nbsp <font color="red"><strong>(Oral)</strong></font>
                 <br>
                 <a href="https://arxiv.org/abs/2112.12496">arXiv</a>
                 /
