--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
                 <strong>Chien-Yi Wang*</strong>, 
                 <a href="http://media.ee.ntu.edu.tw/member/">Shao-Yi Chien</a>, 
                 <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>
+                &nbsp (*=equal contribution)
                 <br>
                 <em>36th AAAI Conference on Artificial Intelligence (AAAI)</em>, 2022 &nbsp <font color="red"><strong>(Oral)</strong></font>
                 <br>
