--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
                 <strong>Chien-Yi Wang*</strong>,
                 <a href="https://www.linkedin.com/in/wenbin-zhu-4152148a/">Wenbin Zhu*</a>,
                 <a href="https://scholar.google.com/citations?user=Lwbsw_QAAAAJ&hl=zh-TW">Kuan Lun Tseng</a>,
-                <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>
-                <a href="https://sites.google.com/site/zjuwby/">Baoyuan Wang</a>,
-                &nbsp (*=equal contribution)
+                <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>,
+                <a href="https://sites.google.com/site/zjuwby/">Baoyuan Wang</a>
+                <br>
+                (*=equal contribution)
                 <br>
                 <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2022 &nbsp
                 <br>
