--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <br>
                 <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2022 &nbsp
                 <br>
-                <a href="https://chienyiwang.github.io">arXiv</a>
+                <a href="https://arxiv.org/abs/2203.14325">arXiv</a>
                 <p></p>
                 <p>
                   We propose PatchNet which reformulates face anti-spoofing as a fine-grained patch-type recognition problem.
@@ -110,7 +110,7 @@
                 <br>
                 <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2022 &nbsp
                 <br>
-                <a href="https://chienyiwang.github.io">arXiv</a>
+                <a href="https://arxiv.org/abs/2203.14327">arXiv</a>
                 <p></p>
                 <p>
                   We introduce a new problem setup called "local-adaptive face recognition (LaFR)" and proposed the clustering and adaptation modules to address face recognition in unseen environments.
