--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
                 <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2022 &nbsp
                 <br>
                 <a href="https://arxiv.org/abs/2203.14325">arXiv</a>
+                /
+                <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Wang_PatchNet_A_Simple_Face_Anti-Spoofing_Framework_via_Fine-Grained_Patch_Recognition_CVPR_2022_paper.pdf">paper</a>
+                /
+                <a href="https://openaccess.thecvf.com/content/CVPR2022/supplemental/Wang_PatchNet_A_Simple_CVPR_2022_supplemental.pdf">supp</a>
+                /
+                <a href="https://youtu.be/pU1knahmees">video</a>
                 <p></p>
                 <p>
                   We propose PatchNet which reformulates face anti-spoofing as a fine-grained patch-type recognition problem.
