--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
                 <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2022 &nbsp
                 <br>
                 <a href="https://arxiv.org/abs/2203.14327">arXiv</a>
+                /
+                <a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Zhu_Local-Adaptive_Face_Recognition_via_Graph-Based_Meta-Clustering_and_Regularized_Adaptation_CVPR_2022_paper.pdf">paper</a>
+                /
+                <a href="https://openaccess.thecvf.com/content/CVPR2022/supplemental/Zhu_Local-Adaptive_Face_Recognition_CVPR_2022_supplemental.pdf">supp</a>
+                /
+                <a href="https://youtu.be/Ng3GB46lNbo">video</a>
                 <p></p>
                 <p>
                   We introduce a new problem setup called "local-adaptive face recognition (LaFR)" and proposed the clustering and adaptation modules to address face recognition in unseen environments.
