--- a/index.html
+++ b/index.html
@@ -173,6 +173,10 @@
                 <em>IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)</em>, 2022 &nbsp
                 <br>
                 <a href="https://arxiv.org/abs/2110.09157">arXiv</a>
+                /
+                <a href="https://openaccess.thecvf.com/content/WACV2022/papers/Wang_Disentangled_Representation_With_Dual-Stage_Feature_Learning_for_Face_Anti-Spoofing_WACV_2022_paper.pdf">paper</a>
+                /
+                <a href="https://openaccess.thecvf.com/content/WACV2022/supplemental/Wang_Disentangled_Representation_With_WACV_2022_supplemental.pdf">supp</a>
                 <p></p>
                 <p>
                   We propose a novel dual-stage disentangled representation learning method that can efficiently untangle spoof-related features from irrelevant ones. Unlike previous FAS disentanglement works with one-stage architecture, we found that the dual-stage training design can improve the training stability and effectively encode the features to detect unseen attack types.
