--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                 <br>
                 <em>37th AAAI Conference on Artificial Intelligence (AAAI)</em>, 2023 &nbsp
                 <br>
-                <a href="https://chienyiwang.github.io">paper</a>
+                <a href="https://arxiv.org/abs/2211.15181">arXiv</a>
                 <p></p>
                 <p>
                   We propose the MixFair Adapter to determine and reduce the identity bias of training samples. Besides, in order to push for ultimate fairness in face recognition, we propose a new evaluation protocol to fairly evaluate the fairness performance of different approaches.
