--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <br>
                 <em>IEEE International Conference on Automatic Face and Gesture Recognition (FG)</em>, 2023 &nbsp
                 <br>
-                <a href="https://chienyiwang.github.io">paper</a>
+                <a href="https://arxiv.org/abs/2211.15955">arXiv</a>
                 <p></p>
                 <p>
                   We introduce a multi-task meta-learning framework for learning more generalized features for face anti-spoofing.
