--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+                <li> [Jan. 2023] One paper is accepted at <a href="https://tbiom.ieee-biometrics.org/">TBIOM</a>.
                 <li> [Nov. 2022] Our paper "MixFairFace" is accepted at <a href="https://aaai.org/Conferences/AAAI-23/">AAAI 2023</a>.
                 <li> [Oct. 2022] One paper is accepted at <a href="https://fg2023.ieee-biometrics.org/">FG 2023</a>. 
                 <li> [Oct. 2022] I joined <a href="https://www.nvidia.com/en-us/research/">NVIDIA Research</a> as a Research Scientist.
@@ -87,6 +88,28 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
         
+        <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/tbiom2023.png" alt="blind-date" width="160" height="160">
+                </td>
+            <td width="75%" valign="middle">
+                <papertitle>RGB-D Face Recognition with Identity-Style Disentanglement and Depth Augmentation</papertitle>
+                
+                <br>
+                <a href="mailto:s108062802@m108.nthu.edu.tw">Meng-Tzu Chiu</a>,
+                <a href="mailto:s107062523@m107.nthu.edu.tw">Hsun-Ying Cheng</a>,
+                <strong>Chien-Yi Wang</strong>, 
+                <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>
+                <br>
+                <em>IEEE Transactions on Biometrics, Behavior, and Identity Science (TBIOM)</em>, 2023 &nbsp
+                <br>
+                <a href="https://ieeexplore.ieee.org/document/10011574">paper</a>
+                <p></p>
+                <p>
+                  We propose to augment facial segmentation and depth maps to assist the RGB-D face recognition task. With the multi-modal augmentation and identity-style disentanglement, the proposed RGB-D recognition model could achieve superior performance on several benchmarks.
+                </p>
+            </td>
+        </tr>
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="images/mixfairface.png" alt="blind-date" width="160" height="160">
@@ -268,7 +291,7 @@
               <a href="https://drive.google.com/file/d/1nHbdb-B-viXfBlS0hBf4gE-SmWP9wp8n/view?usp=sharing">video</a>
               <p></p>
               <p>
-                We propose to leverage pseudo facial segmentation and depth maps to assist the RGB-D face recognition task. With the multi-modality augmentation, the proposed mask-guided RGB-D recognition model could achieve superior performance on several benchmarks.
+                We propose to leverage pseudo facial segmentation and depth maps to assist the RGB-D face recognition task. With the multi-modal augmentation, the proposed mask-guided RGB-D recognition model could achieve superior performance on several benchmarks.
               </p>
           </td>
         </tr>
