--- a/index.html
+++ b/index.html
@@ -387,19 +387,23 @@
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/cvf.jpg"></td>
               <td width="75%" valign="center">
-                <a href="https://2020.ieee-iv.org/">Reviewer, IV 2020</a>
+                Reviewer: <a href="https://2020.ieee-iv.org/">IEEE Intelligent Vehicles Symposium (IV) 2020</a>
                 <br><br>              
-                <a href="https://accv2020.github.io/">Reviewer, ACCV 2020</a>
+                Reviewer: <a href="https://accv2020.github.io/">Asian Conference on Computer Vision (ACCV) 2020</a>
                 <br><br>
-                <a href="https://www.bmvc2020-conference.com/">Reviewer, BMVC 2020</a>
+                Reviewer: <a href="https://britishmachinevisionassociation.github.io/bmvc">The British Machine Vision Conference (BMVC) 2020, 2021, 2022</a>
                 <br><br>
-                <a href="https://www.bmvc2021-virtualconference.com/">Reviewer, BMVC 2021</a>
+                Reviewer: <a href="https://ieeexplore.ieee.org/xpl/conhome/1000149/all-proceedings">International Conference on Computer Vision (ICCV) 2021, 2023</a>
                 <br><br>
-                <a href="http://iccv2021.thecvf.com/home">Reviewer, ICCV 2021</a>
+                Reviewer: <a href="https://ieeexplore.ieee.org/xpl/conhome/1000040/all-proceedings">IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2022, 2023</a>
                 <br><br>
-                <a href="https://wacv2022.thecvf.com/home">Reviewer, WACV 2022</a>
+                Senior PC Member: <a href="https://www.ijcai.org/">International Joint Conferences on Artificial Intelligence (IJCAI)</a> 2023
                 <br><br>
-                <a href="https://cvpr2022.thecvf.com/">Reviewer, CVPR 2022</a>
+                Reviewer: <a href="https://ieeexplore.ieee.org/xpl/conhome/1000147/all-proceedings">Conference on Computer Vision and Pattern Recognition (CVPR)</a> 2022, 2023
+                <br><br>
+                Reviewer: <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34">IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</a>
+                <br><br>
+                Reviewer: <a href="https://www.springer.com/journal/11263">International Journal of Computer Vision (IJCV)</a>
               </td>
             </tr>
         </table>
@@ -413,7 +417,7 @@
                 <p style="text-align:right;font-size:small;">
                           Design and source code from <a style="font-size:small;" href="https://jonbarron.info">Jon Barron's website</a>
                   <br>
-                  Last updated December 2021.
+                  Last updated January 2023.
                       </p>
               </td>
             </tr>
