--- a/index.html
+++ b/index.html
@@ -387,22 +387,22 @@
             <tr>
               <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/cvf.jpg"></td>
               <td width="75%" valign="center">
-                Reviewer: <a href="https://2020.ieee-iv.org/">IEEE Intelligent Vehicles Symposium (IV) 2020</a>
-                <br><br>              
-                Reviewer: <a href="https://accv2020.github.io/">Asian Conference on Computer Vision (ACCV) 2020</a>
-                <br><br>
-                Reviewer: <a href="https://britishmachinevisionassociation.github.io/bmvc">The British Machine Vision Conference (BMVC) 2020, 2021, 2022</a>
-                <br><br>
-                Reviewer: <a href="https://ieeexplore.ieee.org/xpl/conhome/1000149/all-proceedings">International Conference on Computer Vision (ICCV) 2021, 2023</a>
-                <br><br>
-                Reviewer: <a href="https://ieeexplore.ieee.org/xpl/conhome/1000040/all-proceedings">IEEE/CVF Winter Conference on Applications of Computer Vision (WACV) 2022, 2023</a>
-                <br><br>
+                Reviewer: <a href="https://2020.ieee-iv.org/">IEEE Intelligent Vehicles Symposium (IV)</a> 2020
+                <br>              
+                Reviewer: <a href="https://accv2020.github.io/">Asian Conference on Computer Vision (ACCV)</a> 2020
+                <br>
+                Reviewer: <a href="https://britishmachinevisionassociation.github.io/bmvc">The British Machine Vision Conference (BMVC)</a> 2020, 2021, 2022
+                <br>
+                Reviewer: <a href="https://ieeexplore.ieee.org/xpl/conhome/1000149/all-proceedings">International Conference on Computer Vision (ICCV)</a> 2021, 2023
+                <br>
+                Reviewer: <a href="https://ieeexplore.ieee.org/xpl/conhome/1000040/all-proceedings">IEEE/CVF Winter Conference on Applications of Computer Vision (WACV)</a> 2022, 2023
+                <br>
                 Senior PC Member: <a href="https://www.ijcai.org/">International Joint Conferences on Artificial Intelligence (IJCAI)</a> 2023
-                <br><br>
+                <br>
                 Reviewer: <a href="https://ieeexplore.ieee.org/xpl/conhome/1000147/all-proceedings">Conference on Computer Vision and Pattern Recognition (CVPR)</a> 2022, 2023
-                <br><br>
+                <br>
                 Reviewer: <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34">IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</a>
-                <br><br>
+                <br>
                 Reviewer: <a href="https://www.springer.com/journal/11263">International Journal of Computer Vision (IJCV)</a>
               </td>
             </tr>
