--- a/index.html
+++ b/index.html
@@ -399,6 +399,8 @@
                 <br>
                 Senior PC Member: <a href="https://www.ijcai.org/">International Joint Conferences on Artificial Intelligence (IJCAI)</a> 2023
                 <br>
+                Reviewer: <a href="https://link.springer.com/conference/eccv">European Conference on Computer Vision (ECCV)</a> 2022
+                <br>
                 Reviewer: <a href="https://ieeexplore.ieee.org/xpl/conhome/1000147/all-proceedings">Conference on Computer Vision and Pattern Recognition (CVPR)</a> 2022, 2023
                 <br>
                 Reviewer: <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=34">IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI)</a>
