--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+                <li> [Jun. 2023] "GAIN" received the <strong>best paper award</strong> for the <a href="https://www.vislab.ucr.edu/Biometrics2023/">CVPR 2023 Biometrics Workshop</a>!
+                <li> [Jun. 2023] Our "QuAVF" work ranked 1st place winner at the <a href="https://ego4d-data.org/workshops/cvpr23/">2023 CVPR Ego4D Challenge</a> (<a href="https://eval.ai/web/challenges/challenge-page/1625/overview">Social Understanding: Talking-to-me track</a>)!</li>
+                <li> [Apr. 2023] One paper "GAIN" is accepted at <a href="https://www.vislab.ucr.edu/Biometrics2023/">CVPR 2023 Biometrics Workshop</a>.
                 <li> [Jan. 2023] One paper is accepted at <a href="https://tbiom.ieee-biometrics.org/">TBIOM</a>.
                 <li> [Nov. 2022] Our paper "MixFairFace" is accepted at <a href="https://aaai.org/Conferences/AAAI-23/">AAAI 2023</a>.
                 <li> [Oct. 2022] One paper is accepted at <a href="https://fg2023.ieee-biometrics.org/">FG 2023</a>. 
@@ -87,7 +90,33 @@
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
-        
+
+        <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/gain.png" alt="blind-date" width="160" height="160">
+                </td>
+            <td width="75%" valign="middle">
+                <papertitle>A Closer Look at Geometric Temporal Dynamics for Face Anti-Spoofing</papertitle>
+                
+                <br>
+                <a href="https://www.linkedin.com/in/chih-jung-chang/">Chih-Jung Chang</a>,
+                <a href="https://www.linkedin.com/in/yclee00/">Yaw-Chern Lee</a>,
+                <a href="mailto:shyao@microsoft.com">Shih-Hsuan Yao</a>,
+                <a href="https://minhungchen.netlify.app/">Min-Hung Chen</a>,
+                <strong>Chien-Yi Wang</strong>, 
+                <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>,
+                <a href="https://www.linkedin.com/in/tristachen/">Trista Pei-Chun Chen</a>,
+                <br>
+                <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) Workshop</em>, 2023 &nbsp
+                <p></p>
+                <font color="red"><strong>Best Paper Award</strong></font>
+                <br>
+                <a href="https://openaccess.thecvf.com/content/CVPR2023W/Biometrics/papers/Chang_A_Closer_Look_at_Geometric_Temporal_Dynamics_for_Face_Anti-Spoofing_CVPRW_2023_paper.pdf">paper</a>
+                <p></p>
+                <p>
+                  We propose Geometry-Aware Interaction Network (GAIN), which exploits dense facial landmarks with spatio-temporal graph convolutional network (ST-GCN) to establish a more interpretable and modularized Face Anti-Spoofing model.
+            </td>
+        </tr>
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="images/tbiom2023.png" alt="blind-date" width="160" height="160">
