--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <a href="https://minhungchen.netlify.app/">Min-Hung Chen</a>,
                 <strong>Chien-Yi Wang</strong>, 
                 <a href="http://www.cs.nthu.edu.tw/~lai/">Shang-Hong Lai</a>,
-                <a href="https://www.linkedin.com/in/tristachen/">Trista Pei-Chun Chen</a>,
+                <a href="https://www.linkedin.com/in/tristachen/">Trista Pei-Chun Chen</a>
                 <br>
                 <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) Workshop</em>, 2023 &nbsp
                 <br>  
