--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+                <li> [Jul. 2023] One paper "pFedPG" is accepted at <a href="https://iccv2023.thecvf.com/">ICCV 2023</a>.
                 <li> [Jun. 2023] "GAIN" received the <strong>best paper award</strong> for the <a href="https://www.vislab.ucr.edu/Biometrics2023/">CVPR 2023 Biometrics Workshop</a>!
                 <li> [Jun. 2023] Our "QuAVF" work ranked 1st place winner at the <a href="https://ego4d-data.org/workshops/cvpr23/">2023 CVPR Ego4D Challenge</a> (<a href="https://eval.ai/web/challenges/challenge-page/1625/overview">Social Understanding: Talking-to-me track</a>)!</li>
                 <li> [Apr. 2023] One paper "GAIN" is accepted at <a href="https://www.vislab.ucr.edu/Biometrics2023/">CVPR 2023 Biometrics Workshop</a>.
@@ -91,6 +92,50 @@
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
 
+        <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/iccv23_fl.png" alt="blind-date" width="160" height="160">
+                </td>
+            <td width="75%" valign="middle">
+                <papertitle>Efficient Model Personalization in Federated Learning via Client-Specific Prompt Generation</papertitle>
+                
+                <br>
+                <a href="https://fuenyang1127.github.io/">Fu-En Yang</a>,
+                <strong>Chien-Yi Wang</strong>, 
+                <a href="http://vllab.ee.ntu.edu.tw/ycwang.html">Yu-Chiang Frank Wang</a>
+                <br>
+                <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2023 &nbsp
+                <br>  
+                <a href="https://chienyiwang.github.io">paper</a>
+                <p></p>
+                <p>
+                To leverage robust representations from large-scale models while enabling efficient model personalization for heterogeneous clients, we propose a novel personalized FL framework of client-specific Prompt Generation (pFedPG), which learns to deploy a personalized prompt generator at the server for producing client-specific visual prompts that efficiently adapts frozen backbones to local data distributions.
+            </td>
+        </tr>
+        <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/ego4d_ttm.png" alt="blind-date" width="160" height="160">
+                </td>
+            <td width="75%" valign="middle">
+                <papertitle>QuAVF: Quality-aware Audio-Visual Fusion for Ego4D Talking to Me Challenge</papertitle>
+                
+                <br>
+                <a href="https://paperswithcode.com/search?q=author%3AHsi-Che+Lin">Hsi-Che Lin</a>,
+                <strong>Chien-Yi Wang</strong>,
+                <a href="https://minhungchen.netlify.app/">Min-Hung Chen</a>,
+                <a href="https://scholar.google.com/citations?user=eSGkKm4AAAAJ&hl=en">Szu-Wei Fu</a>,
+                <a href="http://vllab.ee.ntu.edu.tw/ycwang.html">Yu-Chiang Frank Wang</a>
+                <br>
+                <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) Workshop</em>, 2023 &nbsp
+                <br>
+                <font color="red"><strong>1st Place Winner @ Ego4D Talking-To-Me (TTM) track</strong></font>
+                <br>
+                <a href="https://arxiv.org/abs/2306.17404">arXiv</a>
+                <p></p>
+                <p>
+                We propose the Quality-aware audio-visual fusion (QuAVF) framework which achieves 67.4% mean average precision (mAP) on the Ego4D talking-to-me (TTM) test set.
+            </td>
+        </tr>
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="images/gain.png" alt="blind-date" width="160" height="160">
