--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <br>
                 <em>IEEE International Conference on Computer Vision (ICCV)</em>, 2023 &nbsp
                 <br>  
-                <a href="https://chienyiwang.github.io">paper</a>
+                <a href="https://arxiv.org/abs/2308.15367">arXiv</a>
                 <p></p>
                 <p>
                 To leverage robust representations from large-scale models while enabling efficient model personalization for heterogeneous clients, we propose a novel personalized FL framework of client-specific Prompt Generation (pFedPG), which learns to deploy a personalized prompt generator at the server for producing client-specific visual prompts that efficiently adapts frozen backbones to local data distributions.
