--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         I received my M.S. degree in <a href="https://minghsiehece.usc.edu/">Electrical Engineering</a> from <a href="https://www.usc.edu/">University of Southern California (USC)</a> in 2016 and B.S. degree in <a href="https://web.ee.ntu.edu.tw/">Electrical Engineering</a> from <a href="https://www.ntu.edu.tw/">National Taiwan University (NTU)</a> in 2013, respectively.  
                     </p>
                     <p style="color:red;">
-                        &#11088; We are actively recruiting <strong>full-time research scientists / interns</strong> at NVIDIA Research Taiwan. Please drop me an email at <a href="mailto:chienyiw@nvidia.com">chienyiw@nvidia.com</a> if you are interested. 
+                        &#11088; We are actively recruiting <strong>full-time research scientists / interns</strong> at <a href="https://research.nvidia.com/labs/twn/">NVIDIA Research Taiwan</a>. Please drop me an email at <a href="mailto:chienyiw@nvidia.com">chienyiw@nvidia.com</a> if you are interested. 
                     </p>
                     
                     <p style="text-align:center">
