--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+                <li> [Jan. 2024] Our paper "RAPPER" is accepted at <a href="https://iclr.cc/Conferences/2024">ICLR 2024</a>.
                 <li> [Jul. 2023] One paper "pFedPG" is accepted at <a href="https://iccv2023.thecvf.com/">ICCV 2023</a>.
                 <li> [Jun. 2023] "GAIN" received the <strong>best paper award</strong> for the <a href="https://www.vislab.ucr.edu/Biometrics2023/">CVPR 2023 Biometrics Workshop</a>!
                 <li> [Jun. 2023] Our "QuAVF" work ranked 1st place winner at the <a href="https://ego4d-data.org/workshops/cvpr23/">2023 CVPR Ego4D Challenge</a> (<a href="https://eval.ai/web/challenges/challenge-page/1625/overview">Social Understanding: Talking-to-me track</a>)!</li>
