--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+                <li> [Jan. 2024] One paper is accepted at <a href="https://2024.ieee-icra.org/">ICRA 2024</a>
                 <li> [Jan. 2024] Our paper "RAPPER" is accepted at <a href="https://iclr.cc/Conferences/2024">ICLR 2024</a>.
                 <li> [Jul. 2023] One paper "pFedPG" is accepted at <a href="https://iccv2023.thecvf.com/">ICCV 2023</a>.
                 <li> [Jun. 2023] "GAIN" received the <strong>best paper award</strong> for the <a href="https://www.vislab.ucr.edu/Biometrics2023/">CVPR 2023 Biometrics Workshop</a>!
