--- a/index.html
+++ b/index.html
@@ -99,6 +99,54 @@
 
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/icra24.png" alt="blind-date" width="160" height="160">
+                </td>
+            <td width="75%" valign="middle">
+                <papertitle>Probabilistic 3D Multi-Object Cooperative Tracking for Autonomous Driving via Differentiable Multi-Sensor Kalman Filter</papertitle>
+                
+                <br>
+                <a href="https://eddyhkchiu.github.io/">Hsu-Kuang Chiu</a>,
+                <strong>Chien-Yi Wang</strong>, 
+                <a href="https://minhungchen.netlify.app/">Min-Hung Chen</a>,
+                <a href="https://www.ri.cmu.edu/ri-faculty/stephen-smith/">Stephen F. Smith</a>
+                <br>
+                <em>IEEE International Conference on Robotics and Automation (ICRA)</em>, 2024 &nbsp
+                <br>
+                <a href="https://eddyhkchiu.github.io/dmstrack.github.io/">Project</a>
+                /  
+                <a href="https://arxiv.org/abs/2309.14655">arXiv</a>
+                /
+                <a href="https://github.com/eddyhkchiu/DMSTrack">Code</a>
+                <p></p>
+                <p>
+                We propose a Differentiable Multi-Sensor Kalman Filter for 3D Multi-Object Cooperative Tracking (DMSTrack), which is designed to be capable of estimating observation noise covariance of each detection from different Connected Autonomous Vehicles (CAVs) to better take advantage of the Kalman Filter’s theoretical optimality property.
+        </tr>
+        <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/iclr24_rapper.png" alt="blind-date" width="160" height="160">
+                </td>
+            <td width="75%" valign="middle">
+                <papertitle>RAPPER: Reinforced Rationale-Prompted Paradigm for Natural Language Explanation in Visual Question Answering</papertitle>
+                
+                <br>
+                <a href="http://vllab.ee.ntu.edu.tw/students.html">Kai-Po Chang</a>,
+                <a href="http://vllab.ee.ntu.edu.tw/students.html">Chi-Ping Huang</a>,
+                <a href="http://vllab.ee.ntu.edu.tw/students.html">Wei-Yuan Cheng</a>,
+                <a href="https://fuenyang1127.github.io/">Fu-En Yang</a>,
+                <strong>Chien-Yi Wang</strong>, 
+                <a href="http://vllab.ee.ntu.edu.tw/students.html">Yung-Hsuan Lai</a>,
+                <a href="http://vllab.ee.ntu.edu.tw/ycwang.html">Yu-Chiang Frank Wang</a>
+                <br>
+                <em>International Conference on Learning Representations (ICLR)</em>, 2024 &nbsp
+                <br>  
+                <a href="https://openreview.net/forum?id=bshfchPM9H">OpenReview</a>
+                <p></p>
+                <p>
+                We introduce Rapper, a two-stage Reinforced RationalePrompted Paradigm for Natural Language Explanation (NLE) in Visual Question Answering (VQA).
+            </td>
+        </tr>  
+        <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="images/iccv23_fl.png" alt="blind-date" width="160" height="160">
                 </td>
             <td width="75%" valign="middle">
