--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
-                <img src="images/icra24.png" alt="blind-date" width="160" height="160">
+                <img src="images/icra24.jpeg" alt="blind-date" width="160" height="160">
                 </td>
             <td width="75%" valign="middle">
                 <papertitle>Probabilistic 3D Multi-Object Cooperative Tracking for Autonomous Driving via Differentiable Multi-Sensor Kalman Filter</papertitle>
