--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
-                <li> [Jan. 2024] One paper is accepted at <a href="https://2024.ieee-icra.org/">ICRA 2024</a>
+                <li> [Feb. 2024] Our paper "MCPNet" is accepted at <a hred="https://cvpr.thecvf.com/Conferences/2024">CVPR 2024</a>.
+                <li> [Jan. 2024] One paper is accepted at <a href="https://2024.ieee-icra.org/">ICRA 2024</a>.
                 <li> [Jan. 2024] Our paper "RAPPER" is accepted at <a href="https://iclr.cc/Conferences/2024">ICLR 2024</a>.
                 <li> [Jul. 2023] One paper "pFedPG" is accepted at <a href="https://iccv2023.thecvf.com/">ICCV 2023</a>.
                 <li> [Jun. 2023] "GAIN" received the <strong>best paper award</strong> for the <a href="https://www.vislab.ucr.edu/Biometrics2023/">CVPR 2023 Biometrics Workshop</a>!
@@ -89,14 +90,33 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>Research</heading>
               <p>
-                I'm interested in computer vision and machine learning.
+                I'm interested in computer vision and multi-modal representation learning.
               </p>
             </td>
           </tr>
         </tbody></table>
 
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
-
+        <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/cvpr24.png" alt="blind-date" width="160" height="160">
+                </td>
+            <td width="75%" valign="middle">
+                <papertitle>MCPNet: An Interpretable Classifier via Multi-Level Concept Prototypes</papertitle>
+                
+                <br>
+                <a href="https://www.linkedin.com/in/bor-shiun-wang-712a65286/?originalSubdomain=tw">Bor-Shiun Wang</a>,
+                <strong>Chien-Yi Wang*</strong>, 
+                <a href="https://walonchiu.github.io/">Wei-Chen Chiu*</a>
+                &nbsp (*=equal advising)
+                <br>
+                <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 &nbsp
+                <br>
+                <a href="https://chienyiwang.github.io">arXiv</a>
+                <p></p>
+                <p>
+                We propose the Multi-Level Concept Prototypes Classifier (MCPNet), an inherently interpretable model, that can explain a classifier's prediction via concept prototypes from low-to-high layers in the CNN models.  
+        </tr>
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="images/icra24.jpeg" alt="blind-date" width="160" height="160">
