--- a/index.html
+++ b/index.html
@@ -99,6 +99,31 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/dora.png" alt="blind-date" width="160" height="160">
+                </td>
+            <td width="75%" valign="middle">
+                <papertitle>DoRA: Weight-Decomposed Low-Rank Adaptation</papertitle>
+                
+                <br>
+                <a href="https://nbasyl.github.io/">Shih-Yang Liu</a>,
+                <strong>Chien-Yi Wang</strong>, 
+                <a href="https://hongxu-yin.github.io/">Hongxu Yin</a>,
+                <a href="https://www.pmolchanov.com/">Pavlo Molchanov</a>, 
+                <a href="http://vllab.ee.ntu.edu.tw/ycwang.html">Yu-Chiang Frank Wang</a>, 
+                <a href="https://seng.hkust.edu.hk/about/people/faculty/tim-kwang-ting-cheng?id=326">Kwang-Ting Cheng</a>, 
+                <a href="https://minhungchen.netlify.app/">Min-Hung Chen</a>
+                <br>
+                <em>arXiv</em>, 2024 &nbsp
+                <br>
+                <a href="https://arxiv.org/abs/2402.09353">arXiv</a>
+                /
+                <a href="https://github.com/nbasyl/DoRA">Code</a>
+                <p></p>
+                <p>
+                We presented DoRA, a new parameter-efficient fine-tuning approach, which consistently outperforms LoRA in fine-tuning LLM without incurring additional inference costs. These improvements are particularly notable for smaller ranks with 37.2% improvement over LoRA for rank 8 and 22.4% improvement for rank 4.
+        </tr>
+        <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="images/cvpr24.png" alt="blind-date" width="160" height="160">
                 </td>
             <td width="75%" valign="middle">
