--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
                 <br>
                 <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR)</em>, 2024 &nbsp
                 <br>
-                <a href="https://chienyiwang.github.io">arXiv</a>
+                <a href="https://eddie221.github.io/MCPNet/">Project</a>
+                /
+                <a href="https://arxiv.org/abs/2404.08968">arXiv</a>
                 <p></p>
                 <p>
                 We propose the Multi-Level Concept Prototypes Classifier (MCPNet), an inherently interpretable model, that can explain a classifier's prediction via concept prototypes from low-to-high layers in the CNN models.  
