--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         I received my graduate degree in <a href="https://minghsiehece.usc.edu/">Electrical Engineering</a> from <a href="https://www.usc.edu/">University of Southern California (USC)</a> and undergraduate degree in <a href="https://web.ee.ntu.edu.tw/">Electrical Engineering</a> from <a href="https://www.ntu.edu.tw/">National Taiwan University (NTU)</a> in 2013, respectively.  
                     </p> -->
                     <p style="color:red;">
-                        &#11088; We are actively recruiting <strong>full-time research scientists / interns</strong> at <a href="https://research.nvidia.com/labs/twn/">NVIDIA Research Taiwan</a>. Please drop me an email at <a href="mailto:chienyiw@nvidia.com">chienyiw@nvidia.com</a> if you are interested. 
+                        &#11088; We are actively recruiting <strong>full-time research scientists / interns</strong> at <a href="https://research.nvidia.com/labs/twn/">NVIDIA Research Taiwan</a>. Please drop me an email at <a href="mailto:chienyiwang0922@gmail.com">chienyiwang0922@gmail.com</a> if you are interested. 
                     </p>
                     
                     <p style="text-align:center">
@@ -63,6 +63,7 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
+                <li> [May. 2024] "DoRA" is accepted at <a hred="https://icml.cc/Conferences/2024/Dates">ICML 2024</a>.
                 <li> [Feb. 2024] Our paper "MCPNet" is accepted at <a hred="https://cvpr.thecvf.com/Conferences/2024">CVPR 2024</a>.
                 <li> [Jan. 2024] One paper is accepted at <a href="https://2024.ieee-icra.org/">ICRA 2024</a>.
                 <li> [Jan. 2024] Our paper "RAPPER" is accepted at <a href="https://iclr.cc/Conferences/2024">ICLR 2024</a>.
@@ -113,7 +114,7 @@
                 <a href="https://seng.hkust.edu.hk/about/people/faculty/tim-kwang-ting-cheng?id=326">Kwang-Ting Cheng</a>, 
                 <a href="https://minhungchen.netlify.app/">Min-Hung Chen</a>
                 <br>
-                <em>arXiv</em>, 2024 &nbsp
+                <em>International Conference on Machine Learning (ICML)</em>, 2024 &nbsp
                 <br>
                 <a href="https://arxiv.org/abs/2402.09353">arXiv</a>
                 /
