--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <br>
                 <a href="https://arxiv.org/abs/2402.09353">arXiv</a>
                 /
-                <a href="https://github.com/nbasyl/DoRA">Code</a>
+                <a href="https://github.com/NVlabs/DoRA">Code</a>
                 <p></p>
                 <p>
                 We presented DoRA, a new parameter-efficient fine-tuning approach, which consistently outperforms LoRA in fine-tuning LLM without incurring additional inference costs. These improvements are particularly notable for smaller ranks with 37.2% improvement over LoRA for rank 8 and 22.4% improvement for rank 4.
