--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
               <heading>News</heading>
               <ul>
-                <li> [May. 2024] "DoRA" is accepted at <a hred="https://icml.cc/Conferences/2024/Dates">ICML 2024</a>.
+                <li> [Jun. 2024] "BOFormer" is accepted at <a href="https://autorlworkshop.github.io/">ICML 2024 AutoRL workshop</a> as a Spotlight paper!</li>
+                <li> [May. 2024] "DoRA" is accepted at <a href="https://icml.cc/Conferences/2024/Dates">ICML 2024</a> as an Oral paper!.
                 <li> [Feb. 2024] Our paper "MCPNet" is accepted at <a hred="https://cvpr.thecvf.com/Conferences/2024">CVPR 2024</a>.
                 <li> [Jan. 2024] One paper is accepted at <a href="https://2024.ieee-icra.org/">ICRA 2024</a>.
                 <li> [Jan. 2024] Our paper "RAPPER" is accepted at <a href="https://iclr.cc/Conferences/2024">ICLR 2024</a>.
@@ -100,6 +101,28 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody></tbody>
         <tr>
             <td style="padding:20px;width:25%;vertical-align:middle">
+                <img src="images/BOFormer.png" alt="blind-date" width="160" height="160">
+                </td>
+            <td width="75%" valign="middle">
+                <papertitle>BOFormer: Learning to Solve Multi-Objective Bayesian Optimization via Non-Markovian RL</papertitle>
+                
+                <br>
+                <a href="https://pinghsieh.github.io/group.html">Yu Heng Hung</a>, 
+                <a href="https://pinghsieh.github.io/group.html">Kai-Jie Lin</a>, 
+                <a href="https://pinghsieh.github.io/group.html">Yu-Heng Lin</a>,  
+                <strong>Chien-Yi Wang*</strong>, 
+                <a href="https://pinghsieh.github.io/">Ping-Chun Hsieh*</a>
+                &nbsp (*=equal advising)
+                <br>
+                <em>International Conference on Machine Learning (ICML) AutoRL Workshop</em>, 2024 &nbsp <font color="red"><strong>(Spotlight)</strong></font>
+                <br>
+                <a href="https://openreview.net/forum?id=ShXsJ1EGWK">OpenReview</a>
+                <p></p>
+                <p>
+                we present a generalized deep Q-learning framework and propose BOFormer, which substantiates the framework for Multi-Objective Bayesian Optimization (MOBO) via sequence modeling.
+        </tr>
+          <tr>
+            <td style="padding:20px;width:25%;vertical-align:middle">
                 <img src="images/dora.png" alt="blind-date" width="160" height="160">
                 </td>
             <td width="75%" valign="middle">
@@ -114,8 +137,10 @@
                 <a href="https://seng.hkust.edu.hk/about/people/faculty/tim-kwang-ting-cheng?id=326">Kwang-Ting Cheng</a>, 
                 <a href="https://minhungchen.netlify.app/">Min-Hung Chen</a>
                 <br>
-                <em>International Conference on Machine Learning (ICML)</em>, 2024 &nbsp
+                <em>International Conference on Machine Learning (ICML)</em>, 2024 &nbsp <font color="red"><strong>(Oral)</strong></font>
                 <br>
+                <a href="https://nbasyl.github.io/DoRA-project-page/">Project</a>
+                /
                 <a href="https://arxiv.org/abs/2402.09353">arXiv</a>
                 /
                 <a href="https://github.com/NVlabs/DoRA">Code</a>
