Delete files and update index

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     
                     <p style="text-align:center">
                     <a href="mailto:chienyiwang0922@gmail.com">Email</a> &nbsp;/&nbsp;
-                    <a href="CV_Chien_Yi_Wang_040124.pdf">CV</a> &nbsp;/&nbsp;
+                    <!-- <a href="CV_Chien_Yi_Wang_040124.pdf">CV</a> &nbsp;/&nbsp; -->
                     <a href="https://scholar.google.com/citations?user=05LW2DcAAAAJ">Google Scholar</a> &nbsp;/&nbsp;
                     <a href="https://www.linkedin.com/in/chienyiwang"> LinkedIn </a>&nbsp;/&nbsp;
                     <a href="https://twitter.com/chienyi_wang">Twitter </a>&nbsp;/&nbsp;
@@ -166,6 +166,8 @@
                 <a href="https://eddie221.github.io/MCPNet/">Project</a>
                 /
                 <a href="https://arxiv.org/abs/2404.08968">arXiv</a>
+                /
+                <a href="https://github.com/NVlabs/MCPNet">Code</a>
                 <p></p>
                 <p>
                 We propose the Multi-Level Concept Prototypes Classifier (MCPNet), an inherently interpretable model, that can explain a classifier's prediction via concept prototypes from low-to-high layers in the CNN models.  
